fix: address alignment in header / sidebar

--- a/packages/uikit-workshop/src/scripts/components/pl-controls/pl-controls.scss
+++ b/packages/uikit-workshop/src/scripts/components/pl-controls/pl-controls.scss
@@ -6,6 +6,7 @@ pl-controls {
   margin-left: auto; /* 2 */
   display: flex;
   flex-wrap: nowrap;
+  align-self: center;
 
   .pl-c-body--theme-sidebar & {
     display: block;
